<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <!-- TODO : change icons -->
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/account"/>
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/home"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings"/>
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/logout"/>
    </group>



</menu>
