<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/module_trigger_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trigger_button_on"/>

    <Button
        android:id="@+id/module_update_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_button"/>

    <Button
        android:id="@+id/module_delete_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:textColor="@android:color/white"
        android:text="@string/delete_button"/>

</LinearLayout>
