<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/module_cardview_id"
                                    android:clickable="true"
                                    android:foreground="?android:attr/selectableItemBackground"
                                    android:layout_width="120dp"
                                    android:layout_height="190dp"
                                    xmlns:cardview="http://schemas.android.com/apk/res-auto"
                                    android:layout_margin="5dp"
                                    cardview:cardCornerRadius="4dp"
                                    android:focusable="true">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <ImageView  android:id="@+id/module_image_id"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:scaleType="centerCrop"
                    android:background="#2d2D2D"
                    android:contentDescription="@string/module_image_description" />

        <TextView android:id="@+id/module_name_id"
                  android:textSize="13sp"
                  android:textColor="#2D2D2D"
                  android:gravity="center"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/module_name" />

        <TextView android:id="@+id/module_label_id"
                  android:textSize="10sp"
                  android:textColor="#999"
                  android:gravity="center"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/module_label"
                  tools:ignore="SmallSp" />

    </LinearLayout>

</android.support.v7.widget.CardView>
